WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303946
Media element volume changing from 0 to >0 does not activate audio session
https://bugs.webkit.org/show_bug.cgi?id=303946
Summary
Media element volume changing from 0 to >0 does not activate audio session
Jer Noble
Reported
2025-12-10 15:06:20 PST
Media element volume changing from 0 to >0 does not activate audio session
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2025-12-10 15:06:21 PST
<
rdar://problem/161691743
>
Jer Noble
Comment 2
2025-12-10 15:10:29 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55200
EWS
Comment 3
2025-12-11 08:14:27 PST
Committed
304297@main
(93a7e4a2234f): <
https://commits.webkit.org/304297@main
> Reviewed commits have been landed. Closing PR #55200 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug